--- a/registro.html
+++ b/registro.html
@@ -40,5 +40,34 @@
       <p>¿Ya tienes cuenta? <a href="index.html">Inicia sesión aquí</a></p>
     </div>
   </div>
+  <script>
+  document.getElementById("registroForm").addEventListener("submit", function(e) {
+    e.preventDefault();
+
+    const nombre = document.getElementById("nombre").value.trim();
+    const email = document.getElementById("email").value.trim();
+    const telefono = document.getElementById("telefono").value.trim();
+    const password = document.getElementById("password").value;
+    const passwordConfirm = document.getElementById("passwordConfirm").value;
+
+    if (password !== passwordConfirm) {
+      alert("Las contraseñas no coinciden.");
+      return;
+    }
+
+    const usuario = {
+      nombre,
+      email,
+      telefono,
+      password
+    };
+
+    localStorage.setItem("usuarioRegistrado", JSON.stringify(usuario));
+
+    alert("¡Registro exitoso! Ahora puedes iniciar sesión.");
+    window.location.href = "index.html"; // Redirige al login
+  });
+</script>
+
 </body>
 </html>
