--- a/registro.html
+++ b/registro.html
@@ -8,7 +8,7 @@
   <style>
     body { font-family: Arial, sans-serif; background: #f0f0f0; padding: 30px; }
     .container { max-width: 450px; margin: 0 auto; background: white; padding: 20px; border-radius: 8px; box-shadow: 0 0 8px #aaa; }
-    label, input, button { display: block; width: 100%; margin-top: 12px; }
+    label, input, select, button { display: block; width: 100%; margin-top: 12px; }
     button { background: #28a745; color: white; border: none; padding: 10px; border-radius: 4px; cursor: pointer; }
     button:hover { background: #1e7e34; }
     .links { margin-top: 15px; text-align: center; }
@@ -34,6 +34,13 @@
       <label for="passwordConfirm">Confirmar contraseña</label>
       <input type="password" id="passwordConfirm" name="passwordConfirm" required placeholder="********" />
 
+      <label for="rol">Tipo de usuario</label>
+      <select id="rol" name="rol" required>
+        <option value="" disabled selected>Selecciona el tipo de usuario</option>
+        <option value="cliente">Cliente</option>
+        <option value="empleado">Empleado</option>
+      </select>
+
       <button type="submit">Registrarse</button>
     </form>
     <div class="links">
@@ -41,33 +48,39 @@
     </div>
   </div>
   <script>
-  document.getElementById("registroForm").addEventListener("submit", function(e) {
-    e.preventDefault();
+    document.getElementById("registroForm").addEventListener("submit", function(e) {
+      e.preventDefault();
 
-    const nombre = document.getElementById("nombre").value.trim();
-    const email = document.getElementById("email").value.trim();
-    const telefono = document.getElementById("telefono").value.trim();
-    const password = document.getElementById("password").value;
-    const passwordConfirm = document.getElementById("passwordConfirm").value;
+      const nombre = document.getElementById("nombre").value.trim();
+      const email = document.getElementById("email").value.trim();
+      const telefono = document.getElementById("telefono").value.trim();
+      const password = document.getElementById("password").value;
+      const passwordConfirm = document.getElementById("passwordConfirm").value;
+      const rol = document.getElementById("rol").value;
 
-    if (password !== passwordConfirm) {
-      alert("Las contraseñas no coinciden.");
-      return;
-    }
+      if (password !== passwordConfirm) {
+        alert("Las contraseñas no coinciden.");
+        return;
+      }
 
-    const usuario = {
-      nombre,
-      email,
-      telefono,
-      password
-    };
+      if (!rol) {
+        alert("Por favor, selecciona el tipo de usuario.");
+        return;
+      }
 
-    localStorage.setItem("usuarioRegistrado", JSON.stringify(usuario));
+      const usuario = {
+        nombre,
+        email,
+        telefono,
+        password,
+        rol
+      };
 
-    alert("¡Registro exitoso! Ahora puedes iniciar sesión.");
-    window.location.href = "index.html"; // Redirige al login
-  });
-</script>
+      localStorage.setItem("usuarioRegistrado", JSON.stringify(usuario));
 
+      alert("¡Registro exitoso! Ahora puedes iniciar sesión.");
+      window.location.href = "index.html"; // Redirige al login
+    });
+  </script>
 </body>
 </html>
