--- a/registro.html
+++ b/registro.html
@@ -79,7 +79,7 @@
       localStorage.setItem("usuarioRegistrado", JSON.stringify(usuario));
 
       alert("¡Registro exitoso! Ahora puedes iniciar sesión.");
-      window.location.href = "index.html"; // Redirige al login
+      window.location.href = "index.html";
     });
   </script>
 </body>
